--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "react-flip-toolkit",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "Configurable FLIP animation helpers for React",
   "main": "lib/index.js",
   "module": "es/index.js",
   "types": "lib/index.d.ts",
-  "files": [
-    "es",
-    "lib",
-    "umd"
-  ],
+  "files": ["es", "lib", "umd"],
   "scripts": {
-    "build": "nwb build-react-component; cp src/index.d.ts lib; cp src/index.d.ts es",
+    "build":
+      "nwb build-react-component; cp src/index.d.ts lib; cp src/index.d.ts es",
     "clean": "nwb clean-module && nwb clean-demo",
-    "deploy-demo": "yarn run build; cp demo/dist/index.html demo/dist/200.html; surge demo/dist --domain literate-fly.surge.sh",
+    "deploy-demo":
+      "yarn run build; cp demo/dist/index.html demo/dist/200.html; surge demo/dist --domain literate-fly.surge.sh",
     "start": "nwb serve-react-demo",
     "test": "jest",
     "test:dom": "parcel mocha/testrunner.html",
@@ -63,16 +61,9 @@
     "transform": {
       "^.+\\.js$": "<rootDir>/jest.transform.js"
     },
-    "testPathIgnorePatterns": [
-      "domtest"
-    ]
+    "testPathIgnorePatterns": ["domtest"]
   },
   "author": "Alex Holachek",
   "license": "MIT",
-  "keywords": [
-    "react-component",
-    "FLIP",
-    "transition",
-    "animation"
-  ]
+  "keywords": ["react-component", "FLIP", "transition", "animation"]
 }
